--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ body {
   background: linear-gradient(297.03deg, #3db3b9 42.35%, #1b5053 42.43%);
 }
 
+.header hr{
+  margin-top: 10px;
+}
+
 header {
   display: flex;
   align-items: center;
@@ -37,6 +41,73 @@ header img {
 
 .nav li {
   font-size: 10px;
+}
+
+ul a {
+  text-decoration: none;
+  color: black;
+}
+
+.ref {
+  padding: 10px;
+  background: rgba(7, 17, 77, 1);
+  color: white;
+  border-radius: 5px;
+}
+
+.main {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.main h2 {
+  color: white;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  font-weight: 700;
+  font-size: 24px;
+}
+
+.start {
+  width: 100%;
+  text-align: end;
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: column;
+  /* padding-bottom: 10rem; */
+  gap: 20px;
+  padding: 20px;
+}
+
+.start a {
+  text-decoration: none;
+  color: black;
+  padding: 5px;
+  /* border: 1px solid white; */
+  border-radius: 5px;
+  width: 15%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  margin-left: 1000px;
+  gap: 10px;
+  background: rgba(161, 228, 225, 1);
+}
+
+.cloud {
+  color: rgba(70, 186, 205, 1);
+  font-weight: 700;
+  font-size: 24px;
+}
+
+.vr {
+  width: 60%;
+}
+
+.vr img {
+  width: 100%;
 }
 
 .about {
