--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   background: linear-gradient(297.03deg, #3db3b9 42.35%, #1b5053 42.43%);
 }
 
-.header hr{
+.header hr {
   margin-top: 10px;
 }
 
@@ -25,6 +25,7 @@ header {
   margin-top: 1rem;
   width: 90%;
   margin: 0 auto;
+  padding-top: 1rem;
 }
 
 header img {
