--- a/courses.css
+++ b/courses.css
@@ -57,7 +57,7 @@ body {
 
 .front-end {
   position: absolute;
-  top: 0;
+  top: -20px;
   left: 0;
   background-color: white;
   width: 100%;
@@ -65,7 +65,6 @@ body {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   margin-left: 20px;
   margin-bottom: 20px;
-  height: 205vh;
 }
 
 .front-end img {
@@ -81,4 +80,26 @@ body {
   gap: 20px;
   list-style-type: none;
   padding: 10px;
+}
+
+@media (max-width: 320px) {
+  .course {
+    width: 100%;
+    flex-direction: column;
+    gap: 300px;
+    margin-top: 0px;
+  }
+
+  .frontend {
+    width: 100%;
+  }
+
+  .front-end {
+    width: 100%;
+    height: auto;
+  }
+
+  .frontend img {
+    width: 100%;
+  }
 }
