--- a/register.css
+++ b/register.css
@@ -10,8 +10,6 @@ body {
   font-family: Raleway;
 }
 
-
-
 h1 {
   width: 80%;
   margin: auto;
@@ -159,6 +157,10 @@ form select {
   z-index: 10;
   max-height: 200px;
   overflow-y: auto;
+}
+
+.dropdown-country-options ::-webkit-scrollbar {
+  display: none;
 }
 
 .dropdown-country-options li {
@@ -324,9 +326,6 @@ form select {
 
 .check {
   background-image: url("img/image_details.svg");
-  /* background-size: cover; */
-  /* background-position: center; */
-  /* background-repeat: no-repeat; */
 }
 
 .success {
@@ -367,8 +366,52 @@ form select {
 }
 
 .success p {
-  /* padding-left: 200px;
-  padding-right: 200px; */
   font-weight: 400;
   text-align: center;
+}
+
+@media (max-width: 320px) {
+  body {
+    padding: 0 10px 10px;
+  }
+
+  h1 {
+    font-size: 24px;
+    margin-top: 20px;
+  }
+  .countryy {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  form {
+    width: 100%;
+  }
+
+  form input {
+    width: 100%;
+  }
+
+  .custom-dropdown {
+    position: relative;
+    width: 100%;
+    cursor: pointer;
+  }
+
+  .custom-country {
+    width: 100%;
+  }
+  .custom-state {
+    width: 100%;
+  }
+
+  .course-dropdown {
+    width: 100%;
+  }
+
+  .success {
+    width: 100%;
+  }
 }
