--- a/register.css
+++ b/register.css
@@ -370,6 +370,52 @@ form select {
   text-align: center;
 }
 
+@media (max-width: 768px) {
+  body {
+    padding: 0 10px 10px;
+  }
+
+  h1 {
+    font-size: 24px;
+    margin-top: 20px;
+  }
+  .countryy {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  form {
+    width: 100%;
+  }
+
+  form input {
+    width: 100%;
+  }
+
+  .custom-dropdown {
+    position: relative;
+    width: 100%;
+    cursor: pointer;
+  }
+
+  .custom-country {
+    width: 100%;
+  }
+  .custom-state {
+    width: 100%;
+  }
+
+  .course-dropdown {
+    width: 100%;
+  }
+
+  .success {
+    width: 100%;
+  }
+}
+
 @media (max-width: 320px) {
   body {
     padding: 0 10px 10px;
