--- a/register.css
+++ b/register.css
@@ -8,13 +8,12 @@
 
 body {
   font-family: Raleway;
+  /* padding: 25px; */
+  background-color: gray !important;
+  padding: 20px;
 }
 
-h1 {
-  width: 80%;
-  margin: auto;
-  margin-top: 60px;
-}
+
 
 label {
   color: rgba(9, 21, 71, 1);
@@ -32,6 +31,10 @@ form {
   gap: 10px;
   position: relative;
   align-content: center;
+  background-color: white;
+  padding: 40px;
+  border-radius: 20px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 form input {
@@ -297,14 +300,22 @@ form select {
 }
 
 .confirm {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  margin-top: 16px;
   width: 80%;
-  margin: auto;
-  margin-top: 20px;
 }
 
 .confirm div {
   display: flex;
-  gap: 20px;
+  gap: 10px;
+  align-items: center;
+  width: 100%;
+}
+
+.confirm input[type="checkbox"] {
+  width: 10%;
 }
 
 .confirm button {
@@ -317,7 +328,7 @@ form select {
   border: none;
   cursor: pointer;
   width: 80%;
-  /* margin: auto; */
+  margin: auto;
   margin-top: 20px;
   padding: 10px;
   background: rgba(68, 201, 196, 1);
@@ -337,21 +348,21 @@ form select {
   align-items: center;
   gap: 50px;
   border-radius: 10px;
-  position: absolute; /* Make the success message overlay the form */
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   margin: auto;
-  z-index: 10; /* Ensure it appears above other content */
-  visibility: hidden; /* Initially hidden */
+  z-index: 10;
+  visibility: hidden;
   opacity: 0;
-  transition: opacity 0.3s ease, visibility 0.3s ease; /* Smooth fade-in effect */
+  transition: opacity 0.3s ease, visibility 0.3s ease;
 }
 
 .success.show {
-  visibility: visible; /* Display the success message */
-  opacity: 1; /* Fade it in */
+  visibility: visible;
+  opacity: 1;
 }
 
 .check {
@@ -384,6 +395,22 @@ form select {
     display: flex;
     flex-direction: column;
     gap: 20px;
+  }
+
+  .dropdown-country {
+    position: relative;
+    width: 200px;
+    cursor: pointer;
+    border: 1px solid rgb(204, 204, 204);
+    border-radius: 10px;
+  }
+
+  .dropdown-state {
+    position: relative;
+    width: 200px;
+    cursor: pointer;
+    border: 1px solid rgb(204, 204, 204);
+    border-radius: 10px;
   }
 
   form {
