--- a/style.css
+++ b/style.css
@@ -6,12 +6,16 @@
   box-sizing: border-box;
 }
 
+
+html {
+  scroll-behavior: smooth;
+}
 body {
   font-family: Raleway;
   position: relative;
 }
 
-.header {
+#header {
   background: linear-gradient(297.03deg, #3db3b9 42.35%, #1b5053 42.43%);
 }
 
@@ -38,13 +42,48 @@ header img {
   width: 150px;
 }
 
-.links{
-  position: relative;
-  overflow: hidden;
+.links {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  background: rgba(161, 228, 225, 1);
+  height: 70vh;
+  width: 100%;
+  max-width: 300px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  border-radius: 10px;
+  display: none;
+}
+
+.links ul li {
+  padding: 10px;
+}
+
+.links ul li:hover {
+  background: rgb(70, 186, 205);
+}
+
+.show-menu {
+  display: block;
 }
 
 .links a {
   text-decoration: none;
+}
+
+.links button {
+  color: white;
+  font-size: 42px;
+  display: flex;
+  align-items: center;
+  width: 20%;
+  justify-content: center;
+  border: none;
+  outline: none;
+  background: transparent;
 }
 
 .links ul {
@@ -53,19 +92,6 @@ header img {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  background: rgba(161, 228, 225, 1);
-  height: 50vh;
-  width: 100%; 
-  max-width: 300px; 
-  position: absolute;
-  top: 10px;
-  right: 0; 
-  transition: transform 0.3s ease-in-out;
-  transform: translateX(100%); 
-}
-
-.links ul.active {
-  transform: translateX(0); 
 }
 
 .nav {
@@ -264,15 +290,15 @@ ul a {
   font-weight: 600;
 }
 
-.courses {
+#courses {
   padding: 40px;
 }
 
-.courses h1 {
+#courses h1 {
   text-align: center;
   position: relative;
 }
-.courses h1::after {
+#courses h1::after {
   content: "";
   display: block;
   width: 150px;
@@ -521,13 +547,13 @@ ul a {
   width: 100%;
 }
 
-.footer {
+#footer {
   background: rgba(9, 21, 71, 1);
   /* padding: 30px; */
   width: 100%;
 }
 
-.footer .top {
+#footer .top {
   display: flex;
   width: 90%;
   margin: 0 auto;
@@ -849,14 +875,14 @@ form button {
     display: none;
   }
 
-  .courses h1 {
+  #courses h1 {
     font-size: 1.5rem;
     margin-top: 20px;
   }
-  .courses {
+  #courses {
     padding: 0px;
   }
-  .courses h1::after {
+  #courses h1::after {
     content: "";
     display: block;
     width: 150px;
@@ -957,7 +983,7 @@ form button {
     margin-top: -30px;
   }
 
-  .footer .top {
+  #footer .top {
     /* text-align: center; */
     display: flex;
     flex-direction: column;
@@ -1165,14 +1191,14 @@ form button {
     display: none;
   }
 
-  .courses h1 {
+  #courses h1 {
     font-size: 1.5rem;
     margin-top: 20px;
   }
-  .courses {
+  #courses {
     padding: 0px;
   }
-  .courses h1::after {
+  #courses h1::after {
     content: "";
     display: block;
     width: 150px;
@@ -1275,7 +1301,7 @@ form button {
     margin-top: -30px;
   }
 
-  .footer .top {
+  #footer .top {
     /* text-align: center; */
     display: flex;
     flex-direction: column;
@@ -1370,6 +1396,7 @@ form button {
   body {
     padding: 0 10px;
   }
+
   .nav {
     display: none;
   }
@@ -1483,14 +1510,14 @@ form button {
     display: none;
   }
 
-  .courses h1 {
+  #courses h1 {
     font-size: 1.5rem;
     margin-top: 20px;
   }
-  .courses {
+  #courses {
     padding: 0px;
   }
-  .courses h1::after {
+  #courses h1::after {
     content: "";
     display: block;
     width: 150px;
@@ -1593,7 +1620,7 @@ form button {
     margin-top: -30px;
   }
 
-  .footer .top {
+  #footer .top {
     /* text-align: center; */
     display: flex;
     flex-direction: column;
